<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5F5"
    tools:context="edu.gatech.setclass.sdpencryptor.SDPEncryptorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/entryTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/drawable_edit_text"
            android:hint="@string/message"
            android:inputType="text"
            android:padding="10dp" />


        <EditText
            android:id="@+id/argInput1ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/drawable_edit_text"
            android:hint="@string/key"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/argInput2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/drawable_edit_text"
            android:hint="@string/rotate"
            android:inputType="number"
            android:padding="10dp" />


        <Button
            android:id="@+id/encryptButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/drawable_button"
            android:text="@string/encrypt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encrypted_message"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textEncryptedID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qw3_amp_yo"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


</RelativeLayout>